<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*Copyright 2022 Infineon Technologies AG.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/polling_gb">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ready_to_scan"
        android:textColor="@color/engineering_dark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_cancel_polling"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:background="@drawable/cancel_polling_btn_bg"
        android:fontFamily="@font/source_sans_pro_regular"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/engineering_dark"
        app:backgroundTint="@null"

        />

    <ImageView
        android:id="@+id/iv_wait_scan"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/nfc_icon"
        android:src="@drawable/ic_nfc_scan"
        android:visibility="visible"
        app:tint="@color/engineering" />

    <ProgressBar
        android:id="@+id/iv_loader"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/progress_bar_description"
        android:paddingBottom="100dp"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_cancel_polling"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:gravity="center"
        android:minLines="2"
        android:text="@string/hold_your_phone_near_the_item_nto_learn_more_about_it"
        android:textColor="@color/engineering_dark"
        android:textSize="18sp" />
</RelativeLayout>