<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*Copyright 2022 Infineon Technologies AG.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.infineon.nfcbpsk.ui.viewmodels.AboutViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AboutFragment">

        <View
            android:id="@+id/view_bg"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@color/ocean"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/source_sans_pro_light"
            android:gravity="center"
            android:text="@string/nfc_easy_check"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_version" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_regular"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/view_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:gravity="center"
            android:text="@string/copy_right"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/view_bg" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/engineering"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:weightSum="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/social_media_logo_of_facebook"
                android:onClick="@{viewModel::onClick}"
                android:src="@drawable/ic_facebook_f_brands"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/iv_linkedin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/social_media_logo_linkedin"
                android:onClick="@{viewModel::onClick}"
                android:src="@drawable/ic_linkedin_in_brands"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/iv_tweeter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/social_media_logo_tweeter"
                android:onClick="@{viewModel::onClick}"
                android:src="@drawable/ic_twitter_brands"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/iv_youtube"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/social_media_logo_youtube"
                android:onClick="@{viewModel::onClick}"
                android:src="@drawable/ic__01_youtube_logotype"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/iv_instagram"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/social_media_logo_instagram"
                android:onClick="@{viewModel::onClick}"
                android:src="@drawable/ic_instagram_brands"
                app:tint="@color/white" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_links"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/view_bg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>