<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*Copyright 2022 Infineon Technologies AG.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="authenticateViewModel"
            type="com.infineon.nfcbpsk.ui.viewmodels.AuthenticViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AuthResultFragment">

        <View
            android:id="@+id/bg_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/authentic_view_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image_of_check"
            android:src="@drawable/ic_check"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_view" />

        <TextView
            android:id="@+id/tv_authentic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/source_sans_pro_light"
            android:text="@string/authentic"
            android:textColor="@color/engineering"
            android:textSize="38sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_check" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/brand_verification_is_successful"
            android:textColor="@color/engineering_dark"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_authentic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_information"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:padding="10dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btn_scan_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_view_product_web_page" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:gravity="center_horizontal"
            android:text="@string/error_parse_service_product"
            android:textColor="@color/engineering_dark"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_scan_again"
            app:layout_constraintTop_toBottomOf="@id/btn_view_product_web_page" />

        <Button
            android:id="@+id/btn_scan_again"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_scan_other_product_bg"
            android:fontFamily="@font/source_sans_pro_light"
            android:text="@string/scan_other_product_now"
            android:textAllCaps="false"
            android:textColor="@color/berry_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btn_view_product_web_page"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:background="@drawable/btn_bg_2"
            android:fontFamily="@font/source_sans_pro_light"
            android:text="@string/view_product_webpage"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="@{authenticateViewModel!=null?View.VISIBLE:View.GONE}"
            app:backgroundTint="@color/berry"
            app:layout_constraintBottom_toBottomOf="@+id/bg_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg_view"
            app:layout_constraintVertical_bias="0.533" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>