<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*Copyright 2022 Infineon Technologies AG.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="recentTransactionViewModel"
            type="com.infineon.nfcbpsk.ui.viewmodels.RecentTransactionViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/source_sans_sro_semibold"
            android:paddingBottom="10dp"
            android:text="@string/transaction_at"
            android:textColor="@color/engineering_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/source_sans_sro_semibold"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/transaction_log_not_available"
            android:textColor="@color/engineering_dark"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom"
            android:layout_below="@+id/title">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="serif-monospace"
                android:paddingBottom="20dp"
                android:textColor="@color/engineering_dark"
                android:textSize="14sp" />

        </ScrollView>

        <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_share"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_bg_2"
                android:fontFamily="@font/source_sans_pro_light"
                android:text="@string/copy_share"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="@color/berry" />
        </RelativeLayout>
    </RelativeLayout>
</layout>